--- a/send0/vercel.json
+++ b/send0/vercel.json
@@ -1,5 +1,27 @@
-{   
-  "rewrites":  [
-      {"source": "/(.*)", "destination": "/"}
+{
+  "rewrites": [
+    {
+      "source": "/api/(.*)", 
+      "destination": "https://send0-server.stayinit.in/api/$1"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://send0.vercel.app"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,POST,PUT,DELETE,OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
+    }
   ]
 }
