--- a/send0/vercel.json
+++ b/send0/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/(.*)", 
       "destination": "https://send0-server.stayinit.in/api/$1"
+    },
+    {
+      "source": "/(.*)", 
+      "destination": "/index.html"
     }
   ],
   "headers": [
