change in yml action file

--- a/send0/vercel.json
+++ b/send0/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)", 
-      "destination": "https://send0-server.stayinit.in/api/$1"
+      "destination": "https://api.cl1p.in/api/$1"
     },
     {
       "source": "/(.*)", 
