updated actions path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'server/**' 
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'server/**' 
 
 jobs:
   build-and-deploy:
@@ -49,6 +56,7 @@ jobs:
             # Stop any existing container with the same name
             sudo docker stop cl1p-server || true
             sudo docker rm cl1p-server || true
+            sudo docker image prune -f
 
             # Pull the new Docker image
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/cl1p-server:latest
